<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="open_site">Ouvrir sur le site</string>
    <string name="refresh">Rafraîchir</string>
    <string name="about_menu">A propos de…</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_share">Partager</string>
    <string name="menu_clear_cache">Vider le cache</string>
    <string name="download_error">Erreur lors du téléchargement de ce gif…</string>
    <string name="cache_emptied_plur">Vidage du cache réussi : # fichiers supprimés</string>
    <string name="cache_emptied_sing">Vidage du cache réussi : 1 fichier supprimé</string>
    <string name="cache_emptied_none">Vidage du cache ignoré : le cache est vide</string>
	<string name="prev">&lt; PREC.</string>
	<string name="next">SUIV. &gt;</string>
	<string name="new_gif">1 nouveau gif !</string>
	<string name="new_gifs">X nouveaux gifs !</string>
</resources>
