<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- List fragment -->
    <item
        android:id="@+id/menu_list_refresh"
        android:icon="@drawable/ic_action_navigation_refresh"
		app:showAsAction="ifRoom"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_list_about"
        app:showAsAction="never"
        android:title="@string/about_menu"/>
    <item
        android:id="@+id/menu_list_notifications"
        android:checkable="true"
        android:checked="true"
		app:showAsAction="never"
        android:title="@string/menu_notifications"/>
    <item
        android:id="@+id/menu_list_clearCache"
		app:showAsAction="never"
        android:title="@string/menu_clear_cache"/>

    <!-- Gif fragment -->
    <item
        android:id="@+id/menu_gif_share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_social_share"
        android:title="@string/menu_share"
        android:visible="false"/>
    <item
        android:id="@+id/menu_gif_openWebsite"
        app:showAsAction="never"
        android:title="@string/open_site"
        android:visible="false"/>
    <item
        android:id="@+id/menu_gif_refresh"
        app:showAsAction="never"
        android:title="@string/refresh"
        android:visible="false"/>
    
</menu>
